src/styles.css
/* ... */
/* ******************* */
/*       SERVICES      */
/* ******************* */

#services {
  padding: clamp(2rem, -0.8626rem + 12.2137vw, 5rem) 0
    clamp(0rem, -4.771rem + 20.3562vw, 5rem);
}

.services__title {
  margin-bottom: 3rem;
}

.card__container {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 2rem;
  margin: 0 auto;
}

.services__card {
  display: flex;
  flex-direction: column;
  gap: 0.75rem;
}

.services__card__icon {
  width: 3.75rem;
  height: 3.75rem;

  display: flex;
  justify-content: center;
  align-items: center;

  background-color: var(--colors-neutral-0);
  border-radius: 0.75rem;
  border: 1px solid --colors-neutral-200;
  box-shadow: 0 1px 0 0 var(--colors-neutral-200);

  padding: 0.25rem 0.5rem;
  object-fit: contain;
  margin-bottom: 0.75rem;
}

@media only screen and (min-width: 48rem) {
  #services {
    padding-bottom: clamp(5rem, 3.8571rem + 2.381vw, 6rem);
  }
}

@media only screen and (min-width: 69rem) {
  #services {
    padding-top: 0;
  }
  .services__title {
    text-align: center;
  }
  .card__container {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
  }

  .services__card {
    flex: 1;
  }
}
/* ******************* */
/*    Side by Side     */
/* ******************* */
#side-by-side {
  padding-top: clamp(4rem, 3.2958rem + 3.0047vw, 6rem);
}

#side-by-side .container {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.side-by-side__content {
  flex-grow: 0;
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
}

.side-by-side__image {
  flex-grow: 1;
  --sbs-img-radius: clamp(0.6113rem, 0.4744rem + 0.584vw, 1rem);
  border-radius: var(--sbs-img-radius);
  overflow: hidden;
  display: flex;

  img {
    width: 100%;
  }
}

@media only screen and (min-width: 64rem) {
  #side-by-side {
    padding-bottom: clamp(4rem, 3.2958rem + 3.0047vw, 6rem);
  }

  #side-by-side .container {
    flex-direction: row;
    align-items: center;
    gap: 3rem;
  }
}

/* ******************* */
/*         CTA         */
/* ******************* */

#cta {
  text-align: center;
  padding: clamp(4rem, 3.0458rem + 4.0712vw, 5rem) var(--page-padding) 0;
}

.cta__container {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: clamp(2rem, 1.5229rem + 2.0356vw, 2.5rem);
  padding: clamp(3rem, 1.0916rem + 8.1425vw, 5rem)
    clamp(0rem, 1.9542rem + -4.0712vw, 1rem);
  border-radius: 1rem;
  background: var(--colors-neutral-200);
}

.cta__title {
  margin-bottom: 0.75rem;
}

#cta .btn--solid {
  font-size: 1.125rem;
  border-radius: 0.625rem;
  padding: 1rem 1.5rem;
}

@media only screen and (min-width: 48rem) {
  #cta {
    padding-top: clamp(0rem, 10.7143rem + -11.9048vw, 5rem);
  }
  .cta__container {
    padding: clamp(5rem, 3.1887rem + 3.7736vw, 6rem) 0;
    position: relative;
    background:
      url("assets/svgs/pattern-knife.svg") no-repeat top -50px right -20.78px/
        171.78px 171.78px,
      url("assets/svgs/pattern-fork.svg") no-repeat bottom -56.72px left -48px /
        179.13px 231.72px,
      var(--colors-neutral-200);
  }
}

@media only screen and (min-width: 64rem) {
  .cta__container {
    background:
      url("assets/svgs/pattern-knife.svg") no-repeat center right -70.43px/
        338.43px 338.43px,
      url("assets/svgs/pattern-fork.svg") no-repeat bottom -17.23px left -73px /
        314.67px 390.23px,
      var(--colors-neutral-200);
  }
}
/* ******************* */
/*       FOOTER        */
/* ******************* */

footer {
  padding-top: 2rem;
  padding-bottom: 1.25rem;
}

.footer__container {
  display: flex;
  flex-direction: column-reverse;
  align-items: center;
  gap: 1.5rem;
}

.footer__socials {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1.5rem;
}

.footer__socials__link {
  width: 1.375rem;
  height: 1.375rem;

  img {
    height: 100%;
    width: 100%;
  }
}

/* TABLET */
@media only screen and (min-width: 48rem) {
  footer {
    padding-top: 2.5rem;
    padding-bottom: 2.5rem;
  }

  .footer__container {
    flex-direction: row;
    justify-content: space-between;
  }
}

